--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-form": "^8.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
